# django-tutorial

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
mysite/mysite/: asgi.py  settings.py  urls.py  wsgi.py
mysite/polls/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
